reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__events__apply.rs_line_1111_col_5.log

*** crates/tracewake-core/src/events/apply.rs:1111:5: replace parse_intention_source -> Result<IntentionSource, ApplyError> with Ok(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/events/apply.rs
+++ replace parse_intention_source -> Result<IntentionSource, ApplyError> with Ok(Default::default())
@@ -1103,29 +1103,17 @@
         _ => Err(ApplyError::BadPayload {
             key: "status",
             value: value.to_string(),
         }),
     }
 }
 
 fn parse_intention_source(payload: &BTreeMap<&str, &str>) -> Result<IntentionSource, ApplyError> {
-    let value = required(payload, "source")?;
-    match value {
-        "need_pressure" => Ok(IntentionSource::NeedPressure),
-        "routine_duty" => Ok(IntentionSource::RoutineDuty),
-        "candidate_goal_selection" => Ok(IntentionSource::CandidateGoalSelection),
-        "safety_interruption" => Ok(IntentionSource::SafetyInterruption),
-        "fixture_routine_assignment" => Ok(IntentionSource::FixtureRoutineAssignment),
-        "fallback" => Ok(IntentionSource::Fallback),
-        _ => Err(ApplyError::BadPayload {
-            key: "source",
-            value: value.to_string(),
-        }),
-    }
+    Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 fn parse_candidate_goal_id(
     payload: &BTreeMap<&str, &str>,
 ) -> Result<crate::ids::CandidateGoalId, ApplyError> {
     let value = required(payload, "selected_goal_id")?;
     crate::ids::CandidateGoalId::new(value).map_err(|_| ApplyError::BadPayload {
         key: "selected_goal_id",


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/events/apply.rs` has changed (1781910442.387924914s, 5s after last build at 1781910437.519924884s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `IntentionSource: Default` is not satisfied
    --> crates/tracewake-core/src/events/apply.rs:1111:8
     |
1111 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `IntentionSource`
    --> crates/tracewake-core/src/agent/intention.rs:38:1
     |
  38 | pub enum IntentionSource {
     | ^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `intention::IntentionSource: Default` is not satisfied
    --> crates/tracewake-core/src/events/apply.rs:1111:8
     |
1111 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `intention::IntentionSource`
    --> crates/tracewake-core/src/agent/intention.rs:38:1
     |
  38 | pub enum IntentionSource {
     | ^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
